# fastapi_example

./: .gitignore  README.md  alembic.ini  database.py  main.py  models.py  pyproject.toml
alembic/: env.py
alembic/versions/: 69d522be13c7_add_cursadas_y_materias.py  cf84e490c9fc_create_alumnos_table.py  f58c3bfacd3a_create_grupo_table.py  fa3e5ade7ea8_add_foreign_key_to_alumno.py
models/: alumno.py  cursada.py  grupo.py  materia.py  public.py
routes/: main.py  utils.py
routes/alumnos/: alumnos.py
routes/grupos/: grupos.py
routes/materias/: materias.py
tests/: conftests.py
tests/routes/alumnos/: test_alumnos.py
