[project]
name = "fastapi_example"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.112.2",
    "sqlalchemy>=2.0.33",
    "alembic>=1.13.2",
    "pytest>=8.3.3",
    "httpx>=0.27.2",
    "sqlmodel>=0.0.22",
    "tenacity>=9.0.0",
]
